--- a/ApiTest/.project
+++ b/ApiTest/.project
@@ -16,6 +16,16 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>libspecs/BuiltIn.py</name>
+			<type>1</type>
+			<location>/usr/local/lib/python3.7/site-packages/robot/libraries/BuiltIn.py</location>
+		</link>
+		<link>
+			<name>libspecs/RequestsLibrary.py</name>
+			<type>1</type>
+			<location>/Library/Python/2.7/site-packages/RequestsLibrary/__init__.py</location>
+		</link>
+		<link>
 			<name>libspecs/urllib3.py</name>
 			<type>1</type>
 			<location>/usr/local/lib/python3.7/site-packages/urllib3/__init__.py</location>
